Add assets directory, rename lookup.js to main.js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             Scratch Profile Browser
         </title>
-        <link rel="icon" type="image/svg" href="icon.svg">
+        <link rel="icon" type="image/svg" href="assets/icon.svg">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -80,7 +80,7 @@
             Signature
             <div class="siggy" id="signature"></div>
         </div>
-        <script src="lookup.js"></script>
+        <script src="main.js"></script>
         <script src="mode.js"></script>
         <script src="cookies.js"></script> 
     </body>
