--- a/not_found.html
+++ b/not_found.html
@@ -25,7 +25,7 @@
         <a href="http://127.0.0.1/ScratchProfileBrowser/">Back to the homepage</a>
         <br>
         <br>
-        <img src="got_you.svg">
+        <img src="assets/got_you.svg">
         <script src="mode.js"></script>
     </body>
 </html>
