--- a/pages/leaderboard.html
+++ b/pages/leaderboard.html
@@ -13,6 +13,13 @@
         <a href="../index.html">Home</a>
     </div>
     <div class="main">
+        <div class="selection">
+            <button id="followers" onclick="changeType('followers')"><img src="../assets/icons/followers.svg"></button>
+            <button id="loves" onclick="changeType('loves')"><img src="../assets/icons/loves.svg"></button>
+            <button id="favorites" onclick="changeType('favorites')"><img src="../assets/icons/favorites.svg"></button>
+            <button id="views" onclick="changeType('views')"><img src="../assets/icons/views.svg"></button>
+            
+            </div>
         <div id="users"></div>
     </div>
     <script src="../mode.js"></script>
